# myCPPprojects

beginnerProject/cGPACalculator/: CMakeLists.txt  main.cpp
beginnerProject/casinoGusssingGame/: CMakeLists.txt  Reward.cpp  Reward.h
beginnerProject/cassionoGusssingGame/: CMakeLists.txt  main.cpp
beginnerProject/hangmanGame/: CMakeLists.txt  GuessingProgress.cpp  GuessingProgress.h  HangmanFigure.cpp  HangmanFigure.h  RandomWords.cpp  RandomWords.h  main.cpp
beginnerProject/inventorySystem_MySQL/: CMakeLists.txt  Database.cpp  Database.h  Product.cpp  Product.h  main.cpp
beginnerProject/loginAndRegistration/: CMakeLists.txt  main.cpp
beginnerProject/rockPaperScissor/: CMakeLists.txt  main.cpp
beginnerProject/simpleCalculator/: main.cpp
beginnerProject/studentDatabaseManagement_MySQL/: CMakeLists.txt  Database.cpp  Database.h  Student.cpp  main.cpp
beginnerProject/studentDatabaseManagement_MySQL_Fix/: CMakeLists.txt  Database.h  Student.h
beginnerProject/studentDatabaseManagement_txt/: CMakeLists.txt  main.cpp
beginnerProject/tic_tac_toe/: CMakeLists.txt  main.cpp
beginnerProject/tic_tac_toe_minimax/: CMakeLists.txt  main.cpp
intermediateProject/calculator_GUI/: CMakeLists.txt  Calculator.cpp  Calculator.h  calculator.cpp  main.cpp
